# api/docs/swagger.json
@@ -64,7 +64,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "tokens",
+                        "description": "Token",
                         "schema": {
                             "type": "string"
                         }
@@ -104,9 +104,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Token",
                         "schema": {
-                            "$ref": "#/definitions/user.RegisterRes"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -202,28 +202,6 @@
                     },
                     "500": {
                         "description": "error while reading from server",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/logout": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "logout",
-                "tags": [
-                    "user"
-                ],
-                "summary": "logout user",
-                "responses": {
-                    "200": {
-                        "description": "message",
                         "schema": {
                             "type": "string"
                         }
@@ -370,19 +348,25 @@
                 "address": {
                     "type": "string"
                 },
+                "birth_date": {
+                    "type": "string"
+                },
                 "createdAt": {
                     "type": "string"
                 },
                 "email": {
                     "type": "string"
                 },
-                "fullname": {
+                "gender": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "phone": {
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
                     "type": "string"
                 },
                 "photo": {
@@ -390,13 +374,16 @@
                 },
                 "role": {
                     "type": "string"
+                },
+                "surname": {
+                    "type": "string"
                 }
             }
         },
         "user.LoginReq": {
             "type": "object",
             "properties": {
-                "email": {
+                "email_or_phone_number": {
                     "type": "string"
                 },
                 "password": {
@@ -407,30 +394,13 @@
         "user.RegisterReq": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "string"
-                },
                 "email": {
-                    "type": "string"
-                },
-                "fullname": {
                     "type": "string"
                 },
                 "password": {
                     "type": "string"
                 },
                 "phone": {
-                    "type": "string"
-                },
-                "role": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.RegisterRes": {
-            "type": "object",
-            "properties": {
-                "id": {
                     "type": "string"
                 }
             }
@@ -469,16 +439,25 @@
                 "address": {
                     "type": "string"
                 },
-                "fullname": {
+                "birth_date": {
+                    "type": "string"
+                },
+                "gender": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "phone": {
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
                     "type": "string"
                 },
                 "photo": {
+                    "type": "string"
+                },
+                "surname": {
                     "type": "string"
                 }
             }
